force-app/main/default/objects/Account/fields/BB_ID_del__c.field-meta.xml
<CustomField>
    <fullName>BB_ID_del__c</fullName>
    <label>BB ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>