force-app/main/default/objects/Account/fields/Constituent_Id__c.field-meta.xml
<CustomField>
    <fullName>Constituent_Id__c</fullName>
    <label>Constituent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>