force-app/main/default/objects/Account/fields/Total_Volunteer_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Volunteer_Hours__c</fullName>
    <label>Total Volunteer Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>